--- a/Project.toml
+++ b/Project.toml
@@ -18,6 +18,7 @@ Rotations = "6038ab10-8711-5258-84ad-4b1120ba62dc"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 
 [compat]
+MeshCat = "0.14"
 julia = "1"
 
 [extras]
