--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,7 @@
 /Manifest.toml
 .CondaPkg
+examples/balance*
+examples/posture_controller_rbd.jl
+examples/rbd_simulate.jl 
+examples/load_pybullet.jl
+examples/load_digit_rbd.jl
