--- a/Project.toml
+++ b/Project.toml
@@ -10,6 +10,7 @@ GeometryBasics = "5c1252a2-5f33-56bf-86c9-59e7332b4326"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 MeshCat = "283c5d60-a78f-5afe-a0af-af636b173e11"
 MeshCatMechanisms = "6ad125db-dd91-5488-b820-c1df6aab299d"
+MuJoCo = "d144bad3-515b-4a7e-a9e1-688e504aa124"
 PyBullet = "9e6df25e-3b2c-44c5-be37-b553c26be21f"
 Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
 Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
