--- a/Project.toml
+++ b/Project.toml
@@ -25,6 +25,7 @@ StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 Colors = "0.12"
 CoordinateTransformations = "0.6"
 GeometryBasics = "0.4"
+JLD2 = "0.4"
 MeshCat = "0.14"
 MeshCatMechanisms = "0.8"
 MuJoCo = "0.1"
