--- a/Project.toml
+++ b/Project.toml
@@ -24,6 +24,7 @@ StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 [compat]
 Colors = "0.12"
 CoordinateTransformations = "0.6"
+FileIO = "1"
 GeometryBasics = "0.4"
 MeshCat = "0.14"
 MeshCatMechanisms = "0.8"
